# VisioneR

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  VisioneR.code-workspace  ab.cmake  todo.md
.github/workflows/: build.yml
.mono/registry/CurrentUser/software/microsoft/csdevkit/v1/pids/1360_133592454988825036/: values.xml
components/object_finder/: CMakeLists.txt
components/object_finder/include/: ObjectFinder.hpp  Quadrilateral.hpp  Tetrangle.hpp  Visualizer.hpp
components/object_finder/src/: ObjectFinder.cpp  Quadrilateral.cpp  Tetrangle.cpp  Visualizer.cpp  opencv_tools.cpp  tools.cpp  tools.hpp
components/visioner_base/: CMakeLists.txt  README.md  ab.cmake
components/visioner_base/include/App/: App.hpp  FaceDesktop.hpp  FaceInterface.hpp  InputFiles.hpp  ObjectFinder.hpp
components/visioner_base/src/: App.cpp  FaceDesktop.cpp  InputFiles.cpp  ObjectFinder.cpp
components/visioner_interfaces/: CMakeLists.txt
components/visioner_interfaces/include/: InputInterface.hpp  InterfaceSceneReader.hpp
doc/: architecture.md
doc/architecture/: diagrams.md
src/: App.cpp  App.hpp  Face.cpp  Face.hpp  ObjectFinder.cpp  ObjectFinder.hpp  app.cpp  main.cpp
src/App/: App.cpp  App.hpp  FaceInterface.hpp  InputInterface.hpp  ObjectFinder.cpp  ObjectFinder.hpp  README.md
src/Input/: FileScanner.cpp  InputFiles.cpp  InputFiles.hpp
src/VisioneREmotion/: CMakeLists.txt
src/VisioneREmotion/src/: AppVisioner.cpp  AppVisioner.hpp  FaceRemotion.cpp  FaceRemotion.hpp  main.cpp
src/Visioner/: AppVisioner.cpp  AppVisioner.hpp  Face.cpp  Face.hpp  InputFiles.hpp
src/VisionerFile/: AppVisioner.cpp  AppVisioner.hpp  CMakeLists.txt  Face.cpp  Face.hpp  InputFiles.cpp  InputFiles.hpp  README.md  SceneReaderFileSystem.cpp  SceneReaderFileSystem.hpp  main.cpp
src/VisionerFile/src/: AppVisioner.cpp  AppVisioner.hpp  SceneReaderFileSystem.cpp  SceneReaderFileSystem.hpp  main.cpp
src/VisionerWebcam/: AppVisioner.cpp  CMakeLists.txt  Face.cpp  Face.hpp  InputWebcam.cpp  InputWebcam.hpp  README.md  SceneReaderWebcam.hpp  main.cpp
src/VisionerWebcam/src/: AppVisioner.cpp  AppVisioner.hpp  main.cpp
src/common_components/: common_components.cmake
src/common_components/FaceDesktop/: CMakeLists.txt
src/common_components/FaceDesktop/include/: FaceDesktop.hpp
src/common_components/FaceDesktop/src/: FaceDesktop.cpp  asmOpenCV.h
src/common_components/SceneReaderWebcam/: CMakeLists.txt  SceneReaderWebcam.cpp  SceneReaderWebcam.hpp
src/common_components/face_app/: CMakeLists.txt
src/common_components/face_app/include/: FaceApp.hpp
src/common_components/face_app/src/: FaceApp.cpp
src/common_components/gui/: CMakeLists.txt
src/common_components/gui/include/: Gui.hpp  MainWindow.hpp
src/common_components/gui/src/: Gui.cpp  MainWindow.cpp  MainWindow.hpp
src/common_components/object_finder/: CMakeLists.txt
src/common_components/object_finder/src/: ObjectFinder.cpp
src/common_components/visioner_app/: CMakeLists.txt
src/common_components/visioner_app/include/: App.hpp  FileScanner.hpp  InputFiles.hpp
src/common_components/visioner_app/src/: App.cpp  FileScanner.cpp  InputFiles.cpp
src/common_components/visioner_base/: CMakeLists.txt
src/common_components/visioner_base/components/object_finder/: CMakeLists.txt
src/common_components/visioner_base/components/object_finder/src/: Quadrilateral.cpp
src/common_components/visioner_base/include/App/: App.hpp
src/common_components/visioner_base/src/: App.cpp
src/common_components/visioner_interfaces/: CMakeLists.txt
src/common_components/visioner_interfaces/include/: FaceInterface.hpp  InputInterface.hpp  InterfaceSceneReader.hpp
src/common_components/visioner_interfaces/src/: visioner_interfaces.cpp
src/find/: find_obj.cpp  find_obj.hpp
